Code update on google to latest revision as on 2nd Feb 2012. (revision 1598)